feat: added seo friendly  metadata for website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1"
+    />
+
+    <!-- Title & Description -->
+    <title>Forge CNC Machining – Precision & Easy 3D Design Uploads</title>
+    <meta
+      name="description"
+      content="Forge Website offers CNC machining services with precision, speed, and an easy drag & drop 3D design upload feature. Built with React & Tailwind CSS."
+    />
+
+    <!-- Keywords (optional, less relevant for Google but useful for other engines) -->
+    <meta
+      name="keywords"
+      content="CNC machining, 3D design upload, precision machining, Forge website, manufacturing, drag & drop"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image svg+xml" href="/forge.jp" />
+
+    <!-- Open Graph (for social media sharing) -->
+    <meta property="og:title" content="Forge CNC Machining" />
+    <meta
+      property="og:description"
+      content="Upload your 3D designs easily and explore precision CNC machining services with Forge."
+    />
+    <meta property="og:image" content="/demo.png" />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Forge CNC Machining" />
+    <meta
+      name="twitter:description"
+      content="Upload your 3D designs easily and explore precision CNC machining services with Forge."
+    />
+    <meta name="twitter:image" content="/demo.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://yourdomain.com" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Nunito:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <noscript
+      >This website requires JavaScript enabled for the best
+      experience.</noscript
+    >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
